# binoc

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml
binoc-cli/: Cargo.toml
binoc-cli/src/: lib.rs  main.rs
binoc-cli/tests/: cli.rs  integration.rs  python_tests.rs
binoc-core/: Cargo.toml
binoc-core/src/: config.rs  controller.rs  ir.rs  lib.rs  output.rs  traits.rs  types.rs
binoc-python/: Cargo.toml  pyproject.toml
binoc-python/python/binoc/: __init__.py  __main__.py  _discovery.py
binoc-python/src/: lib.rs
binoc-python/tests/: conftest.py  test_diff.py  test_discovery.py  test_ir.py  test_plugins.py
binoc-sqlite/: Cargo.toml  README.md  justfile  pyproject.toml
binoc-sqlite/python/binoc_sqlite/: __init__.py
binoc-sqlite/src/: lib.rs  sqlite.rs
binoc-sqlite/test-vectors/: manifest.toml
binoc-sqlite/test-vectors/sqlite-row-addition/: manifest.toml
binoc-sqlite/test-vectors/sqlite-row-addition/expected-output/: changelog.snap  migration.snap
binoc-sqlite/test-vectors/sqlite-row-addition/snapshot-b/data.sqlite.d/: 02_data.sql
binoc-sqlite/test-vectors/sqlite-table-addition/: manifest.toml
binoc-sqlite/test-vectors/sqlite-table-addition/expected-output/: changelog.snap  migration.snap
binoc-sqlite/test-vectors/sqlite-table-addition/snapshot-b/data.sqlite.d/: 01_schema.sql  02_data.sql
binoc-sqlite/test-vectors/without-plugin/: manifest.toml
binoc-sqlite/test-vectors/without-plugin/expected-output/: changelog.snap  migration.snap
binoc-sqlite/test-vectors/without-plugin/snapshot-a/data.sqlite.d/: 02_data.sql
binoc-sqlite/tests/: test_vectors.rs
binoc-stdlib/: Cargo.toml
binoc-stdlib/src/: lib.rs  test_vectors.rs
binoc-stdlib/src/comparators/: binary.rs  csv_compare.rs  directory.rs  mod.rs  tar_compare.rs  text.rs  zip_compare.rs
binoc-stdlib/src/outputters/: markdown.rs
binoc-stdlib/src/transformers/: column_reorder.rs  copy_detector.rs  mod.rs  move_detector.rs
binoc-stdlib/tests/: comparator_tests.rs  test_vectors.rs  transformer_tests.rs
docs/: design.md  tutorial.md  writing_plugins.md
docs/adr/: cross_phase_data_cache.md  deferred_optimizations.md  full_comparison_tree_and_content_hashes.md  index.md  just_as_task_runner.md  media_type_detection.md  output_routing_and_cli_ux.md  per_outputter_config.md  plugin_discovery.md  plugin_test_vector_harness.md  provenance_and_extract.md  snapshot_testing_for_test_vectors.md  stdlib_boundary.md  test_vector_defaults_and_plugin_vectors.md  tutorial_regeneration_lifecycle.md
test-vectors/: README.md  manifest.toml
test-vectors/csv-cell-changes/: manifest.toml
test-vectors/csv-column-addition/: manifest.toml
test-vectors/csv-column-removal/: manifest.toml
test-vectors/csv-column-reorder/: manifest.toml
test-vectors/csv-mixed-changes/: manifest.toml
test-vectors/csv-row-addition/: manifest.toml
test-vectors/directory-file-copy/: manifest.toml
test-vectors/directory-file-move/: manifest.toml
test-vectors/directory-nested/: manifest.toml
test-vectors/single-file-add/: manifest.toml
test-vectors/single-file-modify-binary/: manifest.toml
test-vectors/single-file-modify-text/: manifest.toml
test-vectors/single-file-remove/: manifest.toml
test-vectors/tar-nested/: manifest.toml
test-vectors/tar-simple/: manifest.toml
(+55 files in other folders)
