[package]
name = "binoc-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "binoc_cli"
path = "src/lib.rs"

[[bin]]
name = "binoc-cli"
path = "src/main.rs"

[dependencies]
binoc-core = { path = "../binoc-core" }
binoc-stdlib = { path = "../binoc-stdlib" }
clap = { version = "4.5.60", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.26.0"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
