[package]
name = "binoc-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "_binoc"
crate-type = ["cdylib"]

[dependencies]
binoc-core = { path = "../binoc-core" }
binoc-stdlib = { path = "../binoc-stdlib" }
binoc-cli = { path = "../binoc-cli" }
pyo3 = { version = "0.27", features = ["extension-module"] }
serde_json = "1.0"
