[package]
name = "binoc-sqlite"
version = "0.1.0"
edition = "2021"

[lib]
name = "binoc_sqlite"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3"]

[dependencies]
binoc-core = { path = "../binoc-core" }
rusqlite = { version = "0.35", features = ["bundled"] }
serde_json = "1.0"
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }

[dev-dependencies]
# test-vectors feature brings in the shared harness (run_vector, discover_vectors).
binoc-stdlib = { path = "../binoc-stdlib", features = ["test-vectors"] }
tempfile = "3"  # for unit tests in src/sqlite.rs
