[project]
name = "binoc-sqlite"
version = "0.1.0"
description = "SQLite comparator plugin for binoc"
requires-python = ">=3.10"
dependencies = ["binoc"]

[project.entry-points."binoc.plugins"]
binoc-sqlite = "binoc_sqlite:register"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "binoc_sqlite._binoc_sqlite"
features = ["python"]
