[package]
name = "binoc-stdlib"
version = "0.1.0"
edition = "2021"

[features]
default = ["test-vectors"]
# test-vectors: expose run_vector/discover_vectors so plugins can run test vectors without duplicating harness code.
test-vectors = ["insta", "toml"]

[dependencies]
binoc-core = { path = "../binoc-core" }
blake3 = "1.8.3"
csv = "1.4.0"
infer = "0.19"
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
similar = "2.7.0"
tempfile = "3.26.0"
walkdir = "2.5.0"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"
insta = { version = "1.46.3", features = ["json"], optional = true }
toml = { version = "1.0.4", optional = true }

